<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.viktorkhon.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/header"
            android:gravity="center"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView2"
            style="@style/TextViewDims"
            android:text="@string/question1"/>

        <EditText
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint"/>

        <View
            style="@style/view"/>

        <TextView
            android:id="@+id/question2"
            style="@style/TextViewDims"
            android:text="@string/question2"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioSwitzerland"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Switzerland"
            android:onClick="radioButtonQuestion3"/>

        <RadioButton
            android:id="@+id/radioEngland"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/England"
            android:onClick="radioButtonQuestion3"/>

        <RadioButton
            android:id="@+id/radioFrance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/France"
            android:onClick="radioButtonQuestion3"/>

        <RadioButton
            android:id="@+id/radioNorway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Norway"
            android:onClick="radioButtonQuestion3"/>

        </RadioGroup>

        <View
            style="@style/view"/>

        <TextView
            android:id="@+id/textView4"
            style="@style/TextViewDims"
            android:text="@string/question3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox3.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meals"/>

            <CheckBox
                android:id="@+id/checkBox3.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drinks"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox3.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activities"/>

            <CheckBox
                android:id="@+id/checkBox3.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transfers"/>
        </LinearLayout>

        <View
            style="@style/view"/>

        <TextView
            android:id="@+id/question4"
            style="@style/TextViewDims"
            android:text="@string/question4"/>

        <EditText
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint"/>

        <View
            style="@style/view"/>

        <TextView
            android:id="@+id/question5"
            style="@style/TextViewDims"
            android:text="@string/question5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox5.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meals"/>

            <CheckBox
                android:id="@+id/checkBox5.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drinks"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox5.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destinations"/>

            <CheckBox
                android:id="@+id/checkBox5.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shows"/>
        </LinearLayout>

        <View
            style="@style/view"/>

        <TextView
            android:id="@+id/question6"
            style="@style/TextViewDims"
            android:text="@string/question6"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioBlackSea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blackSea"
                android:onClick="radioButtonQuestion6"/>

            <RadioButton
                android:id="@+id/radioMediterranean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mediterranean"
                android:onClick="radioButtonQuestion6"/>

            <RadioButton
                android:id="@+id/radioGibraltar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Gibraltar"
                android:onClick="radioButtonQuestion6"/>

            <RadioButton
                android:id="@+id/radioDeadSea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadSea"
                android:onClick="radioButtonQuestion6"/>

        </RadioGroup>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>
</ScrollView>
